feat: [6단계] 테스트 요구사항 해결하기